# NTTDataRAG

./: .gitignore  Dockerfile  QTEST.md  README.md  TODO.md  config.py  draw_page_section_boxes.py  embed_chunks.py  embedding.py  exp.py  pdf_chunker.py  pdf_chunker_2023.py  pdf_chunker_2023_2.py  pdf_chunker_2024.py  pdf_span_analyser.py  pyproject.toml  query.py  rag_pipeline.py  retriever.py  utils.py
case/: MatematikMuhendisligiBolumTanitim(4) (2)(1)(2).pptx
data/: chunks.jsonl
db/: index.faiss  metadata.json
src/: app.py  embedding.py  logger.py  merge_chunks.py  pdf_2020_chunker_by_span_analysis.py  pdf_2024_chunker_by_span_analysis.py  pdf_chunker_by_template.py  query.py  rag_pipeline.py  retriever.py  split_double_pages_pdfs.py  utils.py
src/data/: faiss_index.faiss  merged_chunks.jsonl
src/data/chunks/: chunks_pdf_2020.jsonl  chunks_pdf_2022.jsonl  chunks_pdf_2023.jsonl  chunks_pdf_2024.jsonl
tests/: test_chunker.py  test_embedding.py  test_retriever.py
